k8s/base/queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  replicas: 4
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
        - name: queue
          image: ecommerce-app
          imagePullPolicy: IfNotPresent
          command: ["php", "artisan", "queue:work", "--tries=3", "--timeout=90", "--sleep=3"]
