k8s/base/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          image: ecommerce-app
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -c
            - while true; do php artisan schedule:run --verbose --no-interaction; sleep 60; done
